--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -140,7 +140,7 @@ strong, b {
 }
 
 // Responsive adjustments
-@media (min-width: 769px) {
+@media (min-width: 744px) {
   body {
     font-size: 16px;
   }
